--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
                 <a href="/" class="nav-item nav-link active">Home</a>
                 <a href="/proyectos" class="nav-item nav-link">Proyectos</a>
                 <a href="/contacto" class="nav-item nav-link">Contacto</a>
+                <a href="/consumir" class="nav-item nav-link">Web Service</a>
             </div>
         </div>
     </div>
