lectura de datos GET desde spring boot

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
             <div class="navbar-nav">
                 <a href="/" class="nav-item nav-link active">Home</a>
                 <a href="/proyectos" class="nav-item nav-link">Proyectos</a>
-                <a href="/contacto" class="nav-item nav-link">Contacto</a>
                 <a href="/consumir" class="nav-item nav-link">Web Service</a>
+                <a href="/anomalias" class="nav-item nav-link">Web Service Anomalias</a>
             </div>
         </div>
     </div>
