--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,9 @@
             <div class="navbar-nav">
                 <a href="/" class="nav-item nav-link active">Home</a>
                 <a href="/proyectos" class="nav-item nav-link">Proyectos</a>
-                <a href="/consumir" class="nav-item nav-link">Web Service</a>
-                <a href="/anomalias" class="nav-item nav-link">Web Service Anomalias</a>
+                <a href="/consumir" class="nav-item nav-link">Web Service GET</a>
+                <a href="/anomalias" class="nav-item nav-link">Web Service Anomalias(GET)</a>
+                <a href="/post" class="nav-item nav-link">Web Service POST</a>
             </div>
         </div>
     </div>
