--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,9 @@
                 <a href="/" class="nav-item nav-link active">Home</a>
                 <a href="/proyectos" class="nav-item nav-link">Proyectos</a>
                 <a href="/consumir" class="nav-item nav-link">Web Service GET</a>
-                <a href="/anomalias" class="nav-item nav-link">Web Service Anomalias(GET)</a>
+                <a href="/anomalias" class="nav-item nav-link">Web Service SpringBoot(GET)</a>
                 <a href="/post" class="nav-item nav-link">Web Service POST</a>
+                <a href="/fakeStore" class="nav-item nav-link">Fake Store</a>
             </div>
         </div>
     </div>
