--- a/src/app/consumir-web-service-component/consumir-web-service-component.component.html
+++ b/src/app/consumir-web-service-component/consumir-web-service-component.component.html
@@ -1,5 +1,10 @@
-<p>consumir-web-service-component works!</p>
+
 <main role="main" class="container">
+
+    <div class="search">
+        Buscar: <input type="search" class="container-buscar" [(ngModel)]="valorBuscar" name="valorBuscar" (change)="buscar()" />
+    </div>
+    <br>
     <div class="row">
         <div class="col-12">
             <div class="table-responsive">
